# kafka-bridge

./: .dockerignore  .gitignore  Cargo.toml  clippy.toml  deployment.yaml  docker-compose.yaml  dockerfile  main.rs  nats.rs  old-main.rs  pubnub.rs  readme.md  socket.rs  tokio-socket.rs
dashboard/: edge-messaging-platform.css  index.html
examples/kafka/: dockerfile
examples/kafka-cluster-sasl/: docker-compose.yml
examples/kafka-cluster-sasl-gssapi/: docker-compose.yml  kafka-sample-generator.sh  kerberos-setup.sh
examples/kafka-cluster-sasl-gssapi/kafka-bridge/: Dockerfile
examples/kafka-cluster-sasl-gssapi/secrets/: host.consumer.ssl.sasl.config  host.producer.ssl.sasl.config
examples/kafka-cluster-sasl-plain/kafka-bridge/: Dockerfile
examples/kafka-cluster-sasl-ssl/: docker-compose.yml  kafka-sample-generator.sh
examples/kafka-cluster-sasl-ssl/kafka-bridge/: Dockerfile
examples/kafka-cluster-sasl-ssl/secrets/: broker_jaas.conf  (+2 more)
examples/kafka-ibm-event-streams/: docker-compose.yml  kafka-sample-generator.sh
kafka/: docker-compose.yaml  dockerfile  kafka-sample-generator.sh  kafka-topic-generator.sh  readme.md
kafka/ibm-event-streams/: dockerfile
kafka/plain/: docker-compose.yaml  dockerfile  kafka-sample-generator.sh
kafka/sasl_plaintext/: cub.properties  dockerfile  kafka_client_jass.conf  kafka_server_jass.conf  zookeeper_jass.conf
kafka/sasl_ssl/: cub.properties  docker-compose.yaml  dockerfile  generate-certs.sh  kafka-sample-generator.sh
nats/: deployment.yaml  docker-compose.yaml  dockerfile  readme.md
nats-bridge/: Cargo.toml  docker-compose.yaml  dockerfile
nats-bridge/src/: main.rs  socket.rs
old-src/: nats.rs  pubnub.rs
src/: kafka.rs  lib.rs  main.rs  nats.rs  pubnub.rs  socket.rs
src/kafka/: mod.rs  publish.rs  subscribe.rs
(+4 files in other folders)
