[package]
name = "kafka-bridge"
version = "0.2.1"
authors = ["Stephen Blum <blum.stephen@gmail.com>"]
edition = "2018"
readme = "readme.md"

[features]
nightly = []
sasl-ssl = ["rdkafka/ssl-vendored", "rdkafka/gssapi-vendored"]
sasl-plain = ["rdkafka/gssapi-vendored"]

[dependencies]
json = "0.12"
percent-encoding = "2.1.0"
rdkafka = { version = "0.24", features = ["cmake-build"] }
