[package]
name = "kafka-bridge"
version = "0.2.0"
authors = ["Stephen Blum <blum.stephen@gmail.com>"]
edition = "2018"
readme = "readme.md"

[features]
nightly = []
sasl-ssl = ["rdkafka/ssl-vendored"]
sasl-plain = []

[dependencies]
json = "0.12"
percent-encoding = "2.1.0"
openssl = { version = "0.10", features = ["vendored"] }
failure = "^0.1"
failure_derive = "^0.1"
rdkafka = { version = "0.24", features = ["cmake-build"] }
futures = "0.3.5"
futures-util = "0.3.5"
tokio = { version = "0.2", features = ["rt-core", "macros", "sync", "time"] }